--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@heroicons/react": "^2.1.4",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
-    "@react-native-firebase/messaging": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-heroicons": "^4.0.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-star-rating-widget": "^1.8.0",
